--- a/docs/zy123.md
+++ b/docs/zy123.md
@@ -10,7 +10,7 @@ __
 2024年1月，在某群聊被拷打，并为了报复那位群友，拉他下水，但它并未得逞，那位群友也与群中群友站在同一战线  
 2024年2月，在某不知名厂商购买美国服务器，开设 Minecraft 服务器  
 2024年2月，抛弃不知名厂商，购买雨云服务器  
-2024年2月，本人张先生被开  
+2024年2月，此乐子被开  
 2024年2月，拉入 “爱莲” 进入群聊，并把她当黑奴  
 2024年2月，“爱莲” 开始反抗，与群内小丑斗争  
 2024年2月，服务器后台密码被爆，备份被正义人士删除  
